kubernetes/scrypted/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted-ui
spec:
  ports:
  - name: ui
    port: 10443
    targetPort: 10443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrypted
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      hostNetwork: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: scrypted
      containers:
      - name: scrypted
        image: scrypted
        imagePullPolicy: Always
        ports:
        - name: ui
          containerPort: 10443
        volumeMounts:
        - name: data
          mountPath: /server/volume
