kubernetes/scrypted/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scrypted
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-internal
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - scrypted.internal.yuha0.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: scrypted-tls
